--- a/ui/src/components/common/DualPane.scss
+++ b/ui/src/components/common/DualPane.scss
@@ -22,11 +22,10 @@ $dual-pane-mobile-padding: $aleph-mobile-content-padding;
   flex-direction: column;
   flex-grow: 1;
   padding: 0 0 0 $dual-pane-padding;
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
 
   &.allow-overflow {
-    overflow-x: visible;
+    overflow: visible;
   }
 
   .info-tabs-padding {
